{
    "name": "Input",
    "maps": [
        {
            "name": "TouchControls",
            "id": "5dfa2543-e1e0-41b4-ad95-cdeb371dd432",
            "actions": [
                {
                    "name": "TouchInput",
                    "type": "PassThrough",
                    "id": "b0b790b5-4fdb-4f1b-a6b6-bd48004fe7ef",
                    "expectedControlType": "Touch",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "45fd376e-8ef2-4b92-a1cf-73ac8ecb12e6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchHold",
                    "type": "Button",
                    "id": "130b18e0-621f-4bfd-b21b-56e4fbfba3ca",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a4a33d1a-25bb-4121-a49e-87774b55150f",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b47868fa-6c05-4514-825f-922035c2bc4d",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "241d71b2-e75b-40c8-bd68-b552bd96a0c8",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "Hold(duration=0.2)",
                    "processors": "",
                    "groups": "",
                    "action": "TouchHold",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}